--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -473,3 +473,54 @@ body {
 .timeline .timeline-nav-button:hover {
     border-color: #fb6470;
 }
+
+#skills-section {
+    background: fixed url('/img/skills_background.jpg') center no-repeat;
+    background-size: cover;
+    margin-bottom: 75px;
+    position: relative;
+    padding: 75px 0;
+    margin-top: 75px;
+}
+
+#skills-section .section-title {
+    color: white;
+    margin-top: 0;
+}
+
+.skillbar-icon {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    bottom: -22px;
+    left: -70px;
+    overflow: hidden;
+    box-shadow: 0 0 0 4px #353541;
+}
+
+.skillbar-icon img{
+    width: 100%;
+    height: 100%;
+}
+
+.skillbar-wrapper {
+    padding: 15px 30px;
+}
+
+.skillbar {
+    background-color: #353541;
+    /*box-shadow: 0 0 0 2px rgba(175, 85, 92, 0.5);*/
+    box-shadow: 0 0 0 4px #353541;
+}
+
+.skillbar-bar {
+    background-color: #fb6470;
+}
+
+.skill-bar-percent,
+.skillbar-title {
+    font-size: 1em;
+    color: white;
+    background: none;
+}
