--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -501,7 +501,7 @@ body {
     box-shadow: 0 0 0 4px #353541;
 }
 
-.skillbar-icon img{
+.skillbar-icon img {
     width: 100%;
     height: 100%;
 }
@@ -526,3 +526,47 @@ body {
     color: white;
     background: none;
 }
+
+#hire-me-form .form-input,
+#hire-me-form .form-textarea {
+    margin: 10px 0;
+    padding: 12px 24px;
+    border: 1px solid black;
+    border-radius: 4px;
+    width: 100%;
+}
+
+#hire-me-form .form-textarea {
+    margin: 0;
+    height: 100%;
+    resize: none;
+    min-height: 120px;
+}
+
+#hire-me-form .form-input:focus,
+#hire-me-form .form-textarea:focus {
+    border-color: #fb6470;
+    box-shadow: none;
+    outline: none;
+}
+
+#hire-me-form .textarea-wrapper {
+    margin: 10px 0;
+}
+
+#hire-me-form button[type="submit"] {
+    background-color:  rgba(251, 100, 112, 0.6);
+    border: none;
+    color: white;
+    font-size: 1.7em;
+    float: right;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#hire-me-form button[type="submit"]:hover {
+    background-color: #fb6470;
+}
+
+
